--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,19 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>4.3.3.Final</version>
 		</dependency>
+		
+		<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-validator</artifactId>
+    <version>5.0.1.Final</version>
+</dependency>
+
+<!-- validation -->
+<dependency>
+    <groupId>javax.validation</groupId>
+    <artifactId>validation-api</artifactId>
+    <version>1.1.0.Final</version>
+</dependency>
 
 		<!-- Apache Commons DBCP -->
 		<dependency>
@@ -150,6 +163,11 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+
+	
+
+
+
 
 		<!-- Test -->
 		<dependency>
