--- a/pom.xml
+++ b/pom.xml
@@ -204,16 +204,31 @@
 
 
 		<!-- Spring Security -->
+	<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>3.2.2.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring-asm</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
-			<version>3.2.8.RELEASE</version>
+			<version>3.2.2.RELEASE</version>
 		</dependency>
-
+			<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>3.2.2.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>3.2.8.RELEASE</version>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>3.2.2.RELEASE</version>
 		</dependency>
 		
 		
